updated card text and alignment issues.Fixed correlating .css

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -26,7 +26,7 @@ h2 {
 
 .gallery {
     text-align: center;
-    height: 250px;
+
 }
 
 
